# UCSD_Proj_25_5_5_Machine_Learning

./: .gitattributes  .gitignore  .lfsconfig  pyproject.toml  setup_lfs.md
data/: test.csv
