[tool.poetry]
name = "ucsd-codealong-25-5-5-machine-learning"
version = "0.1.0"
description = ""
authors = ["asmith81 <alden.w.smith.iii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
platformdirs = ">=4.0.0,<5.0.0"
boto3 = "^1.35.90"
sagemaker = "^2.237.1"
numpy = ">=1.26.0,<2.1.0"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.18.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
